syntax = "proto3";
package proto;

option go_package = "./proto";

message PaladinTalents {
	// Holy
	int32 divine_strength = 1;
	int32 divine_intellect = 2;
	int32 spiritual_focus = 3;
	int32 improved_seal_of_righteousness = 4;
	int32 healing_light = 5;
	bool consecration = 6;
	int32 improved_lay_on_hands = 7;
	int32 unyielding_faith = 8;
	int32 illumination = 9;
	int32 improved_blessing_of_wisdom = 10;
	bool divine_favor = 11;
	int32 lasting_judgement = 12;
	int32 holy_power = 13;
	bool holy_shock = 14;

	// Protection
	int32 improved_devotion_aura = 15;
	int32 redoubt = 16;
	int32 precision = 17;
	int32 guardians_favor = 18;
	int32 toughness = 19;
	bool blessing_of_kings = 20;
	int32 improved_righteous_fury = 21;
	int32 shield_specialization = 22;
	int32 anticipation = 23;
	int32 improved_hammer_of_justice = 24;
	int32 improved_concentration_aura = 25;
	bool blessing_of_sanctuary = 26;
	int32 reckoning = 27;
	int32 one_handed_weapon_specialization = 28;
	bool holy_shield = 29;

	// Retribution
	int32 improved_blessing_of_might = 30;
	int32 benediction = 31;
	int32 improved_judgement = 32;
	int32 improved_seal_of_the_crusader = 33;
	int32 deflection = 34;
	int32 vindication = 35;
	int32 conviction = 36;
	bool seal_of_command = 37;
	int32 pursuit_of_justice = 38;
	int32 eye_for_an_eye = 39;
	int32 improved_retribution_aura = 40;
	int32 two_handed_weapon_specialization = 41;
	bool sanctity_aura = 42;
	int32 vengeance = 43;
	bool repentance = 44;
}

enum Blessings {
	BlessingUnknown = 0;
	BlessingOfKings = 1;
	BlessingOfMight = 2;
	BlessingOfSalvation = 3;
	BlessingOfWisdom = 4;
	BlessingOfSanctuary = 5;
	BlessingOfLight = 6;
}

enum PaladinAura {
	NoPaladinAura = 0;
	DevotionAura = 2;
	RetributionAura = 3;
}

enum PaladinSeal {
	Vengeance = 0;
	Command = 1;
	Righteousness = 2;
}

enum PaladinJudgement {
	JudgementOfWisdom = 0;
	JudgementOfLight = 1;
	NoJudgement = 2;
}

message RetributionPaladin {
	message Rotation {
	}
	
	message Options {
		PaladinJudgement judgement = 1;
		PaladinSeal seal = 2;
		PaladinAura aura = 3;
		bool use_avenging_wrath = 5;
	}
	Options options = 3;
}

message ProtectionPaladin {
	message Rotation {
	}

	message Options {
		PaladinJudgement judgement = 1;
		PaladinSeal seal = 2;
		PaladinAura aura = 3;
		bool use_avenging_wrath = 5;
	}
	Options options = 3;
}

message HolyPaladin {
	message Rotation {
	}

	message Options {
		PaladinJudgement judgement = 1;
		PaladinAura aura = 2;
	}
	Options options = 3;
}
